		Fixed a bug that no news was fetched at all.
		Fixed a bug that tossed echomail was attempted to post to the
		ISP newsserver (that didn't accept it).
		More debug logging info added for double filename announces.
		Added new experimental files database code which will only be
                used if configured with --enable-experiment.
		Another small change for double filename announces.
		Change file open mode for double filename announces.

	mbfile:
		The toberep command now logs the toberep.data in the debug
		logfile.
		Mbfile check will abort if a header of a files database is 
		corrupt.
		Mbfile check will now accept an area number to just check one
		single area.
		Added new experimental files database code which will only be
		used if configured with --enable-experiment.

	mbaff:
		Added new experimental files database code which will only be
                used if configured with --enable-experiment.

	mbnntp:
		New program, news server to read/write echomail with a news 
		client. Users must be registered bbs users.

	mbsebbs:
		Added logging of virus scanner results.
		Patches for offline reader programs that create messages with
		wrong line terminaters (Sempoint).
		Added new experimental files database code which will only be
                used if configured with --enable-experiment.
		The users tag directory wasn't properly cleaned before a new
		download session.
		The message group stat counters were not updated when a user
		posted a message at the bbs.

	mball:
		Added new experimental files database code which will only be
                used if configured with --enable-experiment.

	mbsetup:
		Added auto setup for message area creation date. Also creates
		a faked newsgroup name in echomail areas. Both settings are
		needed for the newsserver.
		It wasn't possible anymore to change the number of systems in
		menu 1.11.11
		Fixed a header include.
		Fixed an error where new created file areas were created
		without a file header.