@@ -49,9 +49,13 @@ int Add_ToBeRep(struct _filerecord report)
     fname = calloc(PATH_MAX, sizeof(char));
     sprintf(fname, "%s/etc/toberep.data", getenv("MBSE_ROOT"));
     if ((tbr = fopen(fname, "r+")) == NULL) {
-	WriteError("$Can't create %s", fname);
-	free(fname);
-	return FALSE;
+	if ((tbr = fopen(fname, "a+")) == NULL) {
+	    WriteError("$Can't create %s", fname);
+	    free(fname);
+	    return FALSE;
+	} else {
+	    Syslog('f', "Created new %s", fname);
+	}
     }
     free(fname);
 
